test_suite/ERROR_keyword_as_id2.out
ERROR_keyword_as_id2.java: 8:  Syntax Error: Expected Identifier after type specifier `int`, found `boolean`
